src/components/layout.css
:root {
  --primaryColor: #feb633;
  --primaryBackgroundColor: #2b2c2c;
  --secondaryBackgroundColor: #303131;
  --mainWhite: #fff;
  --offWhite: #f7f7f7;
  --mainBlack: #222;
  --mainGray: #ececec;
  --darkGray: #cfcfcf;
  --mainTransition: all 0.3s linear;
  --mainSpacing: 4px;
  --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
  --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
  --insetBoxShadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
  --mainFontFamily: "Poppins";
  --mainFontWeight: 400;
  --titleFontFamily: "Poppins";
  --titleFontWeight: bold;
  --titleColor: #ececec;
  /* scale for 1.2 */
  --ms-small-1: 1rem;
  --ms-small-2: 1.2rem;
  --ms-small-3: 1.44rem;
  --ms-small-4: 1.728rem;
  --ms-small-5: 2.074rem;
  --ms-small-6: 2.488rem;

  /* scale for 1.33 */
  --ms-large-1: 1rem;
  --ms-large-2: 1.333rem;
  --ms-large-3: 1.777rem;
  --ms-large-4: 2.369rem;
  --ms-large-5: 3.157rem;
  --ms-large-6: 4.209rem;
  --navbarHeight: 16rem;
}

* {
  margin: 0;
  padding: 0;
}

html {
  height: 100vh;
  width: 100vw;
}

body {
  font-family: var(--mainFontFamily);
  font-weight: var(--mainFontWeight);
  font-size: 1rem;
  line-height: 1.7;
  height: 100%;
  width: 100%;
}

section:nth-of-type(2n + 1) {
  background-color: var(--secondaryBackgroundColor);
}

section:nth-of-type(2n) {
  background-color: var(--primaryBackgroundColor);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--titleFontFamily);
  font-weight: var(--titleFontWeight);
  color: var(--titleColor);
}

/* Small scale for small screens: */
h1 {
  font-size: var(--ms-small-6);
}
h2 {
  font-size: var(--ms-small-5);
}
h3 {
  font-size: var(--ms-small-4);
}
h4 {
  font-size: var(--ms-small-3);
}
h5 {
  font-size: var(--ms-small-2);
}
h6 {
  font-size: var(--ms-small-1);
}

/* And large scale for larger screens */
@media screen and (min-width: 800px) {
  h1 {
    font-size: var(--ms-large-6);
  }
  h2 {
    font-size: var(--ms-large-5);
  }
  h3 {
    font-size: var(--ms-large-4);
  }
  h4 {
    font-size: var(--ms-large-3);
  }
  h5 {
    font-size: var(--ms-large-2);
  }
  h6 {
    font-size: var(--ms-large-1);
  }
}

